# gimp-jpegxl-plugin

./: README.md  meson.build
src/: config.h  file-jpegxl.c  meson.build
